# deckctl

./: .gitignore  ARCHITECTURE.md  README.md  TODO.md  pyproject.toml
config/: deck.toml.example  secrets.env.example
config/pages/: audio-in.toml.example  audio-out.toml.example  bluetooth.toml.example  feishin.toml.example  ha.toml.example  main.toml.example  marks.toml.example  playlists.toml.example  power.toml.example  sway.toml.example
deckctl/: __init__.py  __main__.py  actions.py  config.py  deck.py  icons.py  pages.py  render.py
deckctl/services/: bluez.py  ha.py  idle_inhibit.py  marks.py  mpris.py  pipewire.py  producers.py  recents.py  subsonic.py  sway.py  swaync.py
deckctl/tools/: gen_scratchpads.py
deckctl/widgets/: __init__.py  audio_sink.py  audio_source.py  bluez.py  command.py  dynamic_page.py  ha_action.py  ha_toggle.py  idle_inhibit.py  mic_mute.py  mpris.py  mpris_loop.py  mpris_shuffle.py  mpris_star.py  mpris_title.py  page.py  stubs.py  sway_mark.py  sway_mark_new.py  sway_window.py  sway_workspace.py  swaync_dnd.py  volume.py  weather.py
scripts/: smoke_test.py
systemd/: deckctl.service
udev/: 99-streamdeck-mk2.rules
